# StockPulsePy_Client

./: CHANGELOG.md  CONTRIBUTING.md  Example usage.ipynb  LICENSE  LICENSE.txt  README.md  pyproject.toml
StockPulsePy_Client/: __init__.py  analytics_data.py  main.py  stock_data.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
tests/: Proposal.md  analytics_data.py  api_initialization.py  formatting_functions.py  main.py  stock_data.py  test_analytics_data.py  test_api_initialization.py  test_formatting_functions.py  test_stock_data.py
